feat: getting icons and images depending on the weather

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <h1 class="text-center my-4">Weather Informations</h1>
 
     <form data-js="change-location" class="my-4 text-center text-white-50">
-      <label for="city">Insert a city name</label>
+      <label for="city">Enter a city name</label>
       <input class="form-control p-4" type="text" name="city" placeholder="Ex: Miami" autofocus autocomplete="off">
     </form>
 
